导入供应商(未完成)

--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -55,7 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BizProduct.cs" />
+    <Compile Include="Product\BizProduct.cs" />
     <Compile Include="BLLBase.cs" />
     <Compile Include="ImageCopy.cs" />
     <Compile Include="ImageRenamer.cs" />
