--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -55,14 +55,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NTSCodeBuilder.cs" />
     <Compile Include="Product\BizProduct.cs" />
     <Compile Include="BLLBase.cs" />
     <Compile Include="ImageCopy.cs" />
     <Compile Include="ImageRenamer.cs" />
     <Compile Include="ImportFromExcel.cs" />
+    <Compile Include="Product\ProductExcelReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="Supplier\BizSupplier.cs" />
+    <Compile Include="Supplier\SupplierExcelReader.cs" />
     <Compile Include="TransferInDatatable.cs" />
   </ItemGroup>
   <ItemGroup>
