--- a/Web/web.config
+++ b/Web/web.config
@@ -9,7 +9,7 @@
   <connectionStrings configSource="config\connectionStrings.config"></connectionStrings>
 
     <system.web>
-        <compilation debug="false" targetFramework="4.0" />
+        <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
 </configuration>
