--- a/Web/web.config
+++ b/Web/web.config
@@ -7,8 +7,10 @@
 
 <configuration>
   <connectionStrings configSource="config\connectionStrings.config"></connectionStrings>
+  
 
     <system.web>
+      <pages configSource="config\pages.config"></pages>
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
