--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ImageOrganizerTest\OrganizerTest.cs" />
     <Compile Include="NBizTest\ImportFromExcelTest.cs" />
     <Compile Include="NBizTest\CopyImageTest.cs" />
     <Compile Include="NDALTest\DALBaseTest.cs" />
@@ -92,7 +93,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestFiles\Images\开平市祥云卫浴制品有限公司\XY-3918.jpg">
+    <Content Include="TestFiles\Images\开平市祥云卫浴制品有限公司\GIMS-110-BC-2.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
