NTS编码生成类(未完,待续)
nts编码应该在  保存产品之前生成.

--- a/NDAL/NDAL.csproj
+++ b/NDAL/NDAL.csproj
@@ -42,6 +42,7 @@
     </Reference>
     <Reference Include="MySql.Data">
       <HintPath>..\packages\MySql.Data.6.6.5\lib\net40\MySql.Data.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
@@ -58,8 +59,10 @@
   <ItemGroup>
     <Compile Include="DALBase.cs" />
     <Compile Include="DALProduct.cs" />
+    <Compile Include="DALSerialNo.cs" />
     <Compile Include="DALSupplier.cs" />
     <Compile Include="HybridSessionBuilder.cs" />
+    <Compile Include="MyAutoMappingConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
