--- a/Web/config/connectionStrings.config
+++ b/Web/config/connectionStrings.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <connectionStrings>
   <add name="conn" connectionString="Server=127.0.0.1;Database=ntsbase;Uid=root;Pwd=root;"/>
 </connectionStrings>
