--- a/Web/config/pages.config
+++ b/Web/config/pages.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <pages>
   <controls>
     <add tagPrefix="uc" namespace="Wuqi.Webdiyer" assembly="AspNetPager" />
