--- a/NTest/packages.config
+++ b/NTest/packages.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="MySql.Data" version="6.6.5" targetFramework="net40" />
+  <package id="NHibernate" version="3.3.3.4000" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="NUnit.Mocks" version="2.6.2" targetFramework="net40" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
