--- a/Web/web.config
+++ b/Web/web.config
@@ -7,11 +7,11 @@
 
 <configuration>
   <connectionStrings configSource="config\connectionStrings.config"></connectionStrings>
-  
 
-    <system.web>
-      <pages configSource="config\pages.config"></pages>
-        <compilation debug="true" targetFramework="4.0" />
-    </system.web>
+  <system.web>
+    <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8"/>
+    <pages configSource="config\pages.config"></pages>
+    <compilation debug="true" targetFramework="4.0" />
+  </system.web>
 
 </configuration>
