--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -65,9 +65,10 @@
     <Compile Include="Product\BizProduct.cs" />
     <Compile Include="BLLBase.cs" />
     <Compile Include="ImageCopy.cs" />
-    <Compile Include="ImageRenamer.cs" />
+    <Compile Include="ImageExtractor.cs" />
     <Compile Include="ImportFromExcel.cs" />
     <Compile Include="Product\ProductExcelReader.cs" />
+    <Compile Include="Product\RowPolulate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="Supplier\BizSupplier.cs" />
