--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -53,6 +53,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmExtractImage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmExtractImage.Designer.cs">
+      <DependentUpon>FrmExtractImage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenameImage.cs">
@@ -63,6 +69,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmExtractImage.resx">
+      <DependentUpon>FrmExtractImage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -87,11 +96,22 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="图片提取Excel格式.xls">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NBiz\NBiz.csproj">
+      <Project>{5F8D1640-EA2F-4E84-BF40-922ED389D3AF}</Project>
+      <Name>NBiz</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NLibrary\NLibrary.csproj">
       <Project>{B63398DF-8B0D-4BF6-AD17-71003F9BFC13}</Project>
       <Name>NLibrary</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NModel\NModel.csproj">
+      <Project>{B3CE5460-8541-4CF5-9708-8E8D85FDF4C2}</Project>
+      <Name>NModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
