--- a/Web/web.config
+++ b/Web/web.config
@@ -12,6 +12,7 @@
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8"/>
     <pages configSource="config\pages.config"></pages>
     <compilation debug="true" targetFramework="4.0" />
+    <customErrors mode="Off"></customErrors>
   </system.web>
 
 </configuration>
