--- a/Web/config/pages.config
+++ b/Web/config/pages.config
@@ -2,6 +2,7 @@
 <pages>
   <controls>
     <add tagPrefix="uc" namespace="Wuqi.Webdiyer" assembly="AspNetPager" />
+    <add tagPrefix="uc" namespace="NLibrary" assembly="NLibrary" />
     <add tagPrefix="asp" namespace="System.Web.UI.DataVisualization.Charting"
       assembly="System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </controls>
