--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -123,6 +123,9 @@
     <None Include="TestFiles\联丰报价单 20130108 --餐厨部2.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="TestFiles\英文——2013-3-26家具（brighthome）数据表.XLS">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="TestFiles\NBizTest\MakeThumbnail\original\GIMS-110-BC-2.jpg">
