--- a/Web/config/connectionStrings.config
+++ b/Web/config/connectionStrings.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0"?>
 <connectionStrings>
-  <add name="conn" connectionString="Server=127.0.0.1;Database=ntsbase;Uid=root;Pwd=root;"/>
+  <!--<add name="conn" connectionString="Server=127.0.0.1;Database=ntsbase;Uid=root;Pwd=root;CharSet=utf8;"/>-->
+  <add name="conn" connectionString="
+       Server=192.168.1.44;
+       Database=ntsbase_test;
+       Uid=root;
+       Pwd=exDr97K4NDct37dw;
+       CharSet=utf8;"/>
+
 </connectionStrings>
