--- a/NLibrary/NLibrary.csproj
+++ b/NLibrary/NLibrary.csproj
@@ -45,10 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ButtonExt.cs" />
+    <Compile Include="Convertor.cs" />
     <Compile Include="FormatSerialNo.cs" />
     <Compile Include="GlobalVariables.cs" />
     <Compile Include="IOHelper.cs" />
     <Compile Include="NLogger.cs" />
+    <Compile Include="ParameterCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="StringHelper.cs" />
