--- a/NModel/NModel.csproj
+++ b/NModel/NModel.csproj
@@ -52,11 +52,13 @@
     <Compile Include="Category.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="FormatSerialNo.cs" />
+    <Compile Include="ImportLog.cs" />
     <Compile Include="Mapping\ProductMap.cs" />
     <Compile Include="Mapping\CategoryMap.cs" />
     <Compile Include="Mapping\SupplierMap.cs" />
     <Compile Include="Mapping\FormatSerialNo.cs" />
     <Compile Include="Mapping\MultiLanguageItemMap.cs" />
+    <Compile Include="Mapping\ImportLogMap.cs" />
     <Compile Include="MultiLanguageItem.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
