--- a/NLibrary/NLibrary.csproj
+++ b/NLibrary/NLibrary.csproj
@@ -31,8 +31,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>..\packages\EPPlus.2.9.0.1\lib\2.0\EPPlus.dll</HintPath>
+    </Reference>
+    <Reference Include="ExcelHandler">
+      <HintPath>..\packages\ExcelHandler.1.0.0\lib\net40\ExcelHandler.dll</HintPath>
+    </Reference>
+    <Reference Include="Ionic.Zip">
+      <HintPath>..\packages\NPOI.1.2.5\lib\net40\Ionic.Zip.dll</HintPath>
+    </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI">
+      <HintPath>..\packages\NPOI.1.2.5\lib\net40\NPOI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,6 +64,7 @@
     <Compile Include="NLogger.cs" />
     <Compile Include="ParameterCheck.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadExcelToDataTable.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="StringHelper.cs" />
   </ItemGroup>
