--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -105,6 +105,12 @@
       <DependentUpon>RenameImage.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="config\connectionStrings.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="config\log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
