--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Category\BizCategory.cs" />
     <Compile Include="Category\CategoryExcelReader.cs" />
     <Compile Include="FormatCheck.cs" />
-    <Compile Include="IExcelReader.cs" />
+    <Compile Include="IDataTableConverter.cs" />
     <Compile Include="ImageOrganizer\ExtractRuleFactory.cs" />
     <Compile Include="ImageOrganizer\ExtractRuleNormal.cs" />
     <Compile Include="ImageOrganizer\IExtractRule.cs" />
