--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -228,7 +228,7 @@
     <Content Include="TestFiles\FormatCheck\河南华夏丝毯厂\河南华夏丝毯厂\500L 8x10ft%28245x306cm%29_7065.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\潮州市金源利陶瓷制作有限公司\潮州市金源利陶瓷制作有限公司\A图\j102 11.jpg">
+    <Content Include="TestFiles\FormatCheck\潮州市金源利陶瓷制作有限公司\潮州市金源利陶瓷制作有限公司\A图\j10 2 11.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="TestFiles\FormatCheck\潮州市金源利陶瓷制作有限公司\潮州市金源利陶瓷制作有限公司\A图\J103234钢.jpg">
