--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -71,6 +71,12 @@
     <Compile Include="FrmExtractImage.Designer.cs">
       <DependentUpon>FrmExtractImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProductUploader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductUploader.Designer.cs">
+      <DependentUpon>ProductUploader.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RenameImage.cs">
@@ -90,6 +96,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmExtractImage.resx">
       <DependentUpon>FrmExtractImage.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductUploader.resx">
+      <DependentUpon>ProductUploader.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
