导入程序的 单元测试. todo: 界面反馈和 导入日志.

--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -58,7 +58,7 @@
   <ItemGroup>
     <Compile Include="Category\BizCategory.cs" />
     <Compile Include="Category\CategoryExcelReader.cs" />
-    <Compile Include="Product\FormatCheck.cs" />
+    <Compile Include="Product\ProductImportor.cs" />
     <Compile Include="IDataTableConverter.cs" />
     <Compile Include="ImageOrganizer\ExtractRuleFactory.cs" />
     <Compile Include="ImageOrganizer\ExtractRuleNormal.cs" />
