--- a/NModel/NModel.csproj
+++ b/NModel/NModel.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supplier.cs" />
+    <Compile Include="Variables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
