--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -31,17 +31,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FizzWare.NBuilder">
+      <HintPath>..\packages\NBuilder.3.0.1.1\lib\FizzWare.NBuilder.dll</HintPath>
+    </Reference>
     <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="log4net, Version=1.2.11.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\CodeSharp.Package.MSTest.10.0\lib\net40\Microsoft.VisualStudio.QualityTools.UnitTestFramework.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data">
       <HintPath>..\packages\MySql.Data.6.6.5\lib\net40\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.3.3.3.4000\lib\Net35\NHibernate.dll</HintPath>
+    </Reference>
+    <Reference Include="NMock3">
+      <HintPath>..\packages\NMock3.3.5.44\lib\net40\NMock3.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
@@ -72,6 +82,7 @@
     <Compile Include="NDALTest\ProductDALTest.cs" />
     <Compile Include="NLibraryTest\FormatSerialNoTest.cs" />
     <Compile Include="NLibraryTest\NPOITEst.cs" />
+    <Compile Include="NMock3\NMockTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -100,17 +111,17 @@
     <None Include="config\log4net.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="NMock3\NMock3 Cheat Sheet.pdf" />
     <None Include="packages.config" />
     <None Include="TestFiles\FormatCheck\巴非\巴菲 报价单.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\FormatCheck\恒铵\恒铵A级\Thumbs.db">
+    <None Include="TestFiles\FormatCheck\恒铵\Thumbs.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\FormatCheck\恒铵\恒铵A级\恒铵 产品报价单A图 2013.5.3.xls">
+    <None Include="TestFiles\FormatCheck\恒铵\恒铵 产品报价单A图 2013.5.3.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="TestFiles\FormatCheck\恒铵\恒铵B级\恒铵 产品报价单B图 2013.5.6.xls" />
     <None Include="TestFiles\FormatCheck\河南华夏丝毯厂\供应商自评表.121xlsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -165,54 +176,48 @@
     <Content Include="TestFiles\FormatCheck\巴非\图片\DSCF5244.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\B-005.tif">
+    <Content Include="TestFiles\FormatCheck\恒铵\B-005.tif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\B-007.tif">
+    <Content Include="TestFiles\FormatCheck\恒铵\B-007.tif">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\B-008.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\B-008.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\B-009.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\B-009.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\B-010.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\B-010.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\DSCF5243.jpg">
+    <Content Include="TestFiles\FormatCheck\恒铵\DSCF5243.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\DSCF5244.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\DSCF5244.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\HA001.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\HA001.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\HA002.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\HA002.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\HA003.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\HA003.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\HA004.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\HA004.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\HA005.JPG">
+    <Content Include="TestFiles\FormatCheck\恒铵\HA005.JPG">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\IMG-0282.jpg">
+    <Content Include="TestFiles\FormatCheck\恒铵\IMG-0282.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵A级\IMG-0297.jpg">
+    <Content Include="TestFiles\FormatCheck\恒铵\IMG-0297.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\200743091527.jpg" />
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\200743091555.jpg" />
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\200743091610.jpg" />
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\DSCF5227.jpg" />
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\DSCF5228.jpg" />
-    <Content Include="TestFiles\FormatCheck\恒铵\恒铵B级\DSCN0019.jpg" />
     <Content Include="TestFiles\FormatCheck\河南华夏丝毯厂\河南华夏丝毯厂\300L 5x8ft w- %286919%29.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
