导入程序, 导入日志
1) excel文件和图片一起导入
2) 导入日志记录

--- a/NModel/NModel.csproj
+++ b/NModel/NModel.csproj
@@ -52,13 +52,13 @@
     <Compile Include="Category.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="FormatSerialNo.cs" />
-    <Compile Include="ImportLog.cs" />
+    <Compile Include="ImportOperationLog.cs" />
     <Compile Include="Mapping\ProductMap.cs" />
     <Compile Include="Mapping\CategoryMap.cs" />
     <Compile Include="Mapping\SupplierMap.cs" />
     <Compile Include="Mapping\FormatSerialNo.cs" />
     <Compile Include="Mapping\MultiLanguageItemMap.cs" />
-    <Compile Include="Mapping\ImportLogMap.cs" />
+    <Compile Include="Mapping\ImportOperationLogMap.cs" />
     <Compile Include="MultiLanguageItem.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
