--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Category\BizCategory.cs" />
     <Compile Include="Category\CategoryExcelReader.cs" />
+    <Compile Include="Product\ProductComparer.cs" />
     <Compile Include="Product\ProductImportor.cs" />
     <Compile Include="IDataTableConverter.cs" />
     <Compile Include="ImageOrganizer\ExtractRuleFactory.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="ImportFromExcel.cs" />
     <Compile Include="Product\ProductDataTableConverter.cs" />
     <Compile Include="Product\RowPolulate.cs" />
+    <Compile Include="Product\SingleFolderImport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="Supplier\BizSupplier.cs" />
