定义产品集(例如:事业部挑选的,重点推荐的,近期关注的 等等) ( to be continued)

--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -152,6 +152,9 @@
     <None Include="TestFiles\图片提取20130306.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="TestFiles\挑选产品汇总.xlsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="TestFiles\联丰报价单 20130108 --餐厨部2.xls">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
