--- a/NModel/NModel.csproj
+++ b/NModel/NModel.csproj
@@ -59,8 +59,12 @@
     <Compile Include="Mapping\FormatSerialNo.cs" />
     <Compile Include="Mapping\MultiLanguageItemMap.cs" />
     <Compile Include="Mapping\ImportOperationLogMap.cs" />
+    <Compile Include="Mapping\ProductTagMap.cs" />
+    <Compile Include="Mapping\ProductTag_ProductMap.cs" />
     <Compile Include="MultiLanguageItem.cs" />
     <Compile Include="Product.cs" />
+    <Compile Include="ProductTag.cs" />
+    <Compile Include="ProductTag_Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Supplier.cs" />
     <Compile Include="Variables.cs" />
