--- a/NBiz/NBiz.csproj
+++ b/NBiz/NBiz.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Product\ProductDataTableConverter.cs" />
     <Compile Include="Product\RowPolulate.cs" />
     <Compile Include="Product\SingleFolderImport.cs" />
+    <Compile Include="Product\BizProductTag.cs" />
+    <Compile Include="Product\StringPopulate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerialNumberManager.cs" />
     <Compile Include="Supplier\BizSupplier.cs" />
