--- a/Tools/Tools.csproj
+++ b/Tools/Tools.csproj
@@ -113,7 +113,9 @@
     <EmbeddedResource Include="RenameImage.resx">
       <DependentUpon>RenameImage.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="config\connectionStrings.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
