--- a/NModel/NModel.csproj
+++ b/NModel/NModel.csproj
@@ -61,7 +61,9 @@
     <Compile Include="Mapping\ImportOperationLogMap.cs" />
     <Compile Include="Mapping\ProductTagMap.cs" />
     <Compile Include="Mapping\ProductTag_ProductMap.cs" />
+    <Compile Include="Mapping\NTSMemberMap.cs" />
     <Compile Include="MultiLanguageItem.cs" />
+    <Compile Include="NTSMember.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductTag.cs" />
     <Compile Include="ProductTag_Product.cs" />
