--- a/Web/web.config
+++ b/Web/web.config
@@ -8,8 +8,11 @@
   <system.web>
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" />
     <pages configSource="config\pages.config"></pages>
+    <membership configSource="config\membership.config"></membership>
+    <authentication configSource="config\authentication.config"></authentication>
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off"></customErrors>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
