--- a/NTest/NTest.csproj
+++ b/NTest/NTest.csproj
@@ -77,6 +77,7 @@
     <Compile Include="NBizTest\ImportFromExcelTest.cs" />
     <Compile Include="NBizTest\CopyImageTest.cs" />
     <Compile Include="NBizTest\MakeThumbnailTest.cs" />
+    <Compile Include="NBizTest\SingleFolderImportTest.cs" />
     <Compile Include="NBizTest\SupplierTest.cs" />
     <Compile Include="NBizTest\CheckFormatTest.cs" />
     <Compile Include="NBizTest\BizProductTest.cs" />
