--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,5 +5,6 @@
   <repository path="..\NLibrary\packages.config" />
   <repository path="..\NModel\packages.config" />
   <repository path="..\NTest\packages.config" />
+  <repository path="..\Tools\packages.config" />
   <repository path="..\Web\packages.config" />
 </repositories>
